force-app/main/default/objects/Activity__c/fields/Youtube_Embaded_Link__c.field-meta.xml
<CustomField>
    <fullName>Youtube_Embaded_Link__c</fullName>
    <label>Youtube Embaded Link</label>
    <type>Url</type>
</CustomField>