force-app/main/default/objects/Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Membership__c</columns>
    <columns>Youtube_Embaded_Link__c</columns>
    <columns>Class__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>